n8n-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: n8n-webhook
  name: n8n-webhook
  namespace: n8n
spec:
  type: ClusterIP
  ports:
    - name: "5678"
      port: 5678
      targetPort: 5678
      protocol: TCP
  selector:
    service: n8n-webhook
