n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: n8n
spec:
  rules:
    - host: n8n.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: n8n
              port:
                number: 5678
